more updates for Fishbone 	     - return to use playlist frame since it is the only way 	     to load up to the current song in the list 	     - rework playlist resize javascript to use the frames 	     - Fix some large IE fonts 	     - fix a overzealous scrollbar in IE 	     - player change refreshes all frames to hte new player 	     WITHOUT forcing the browser frame back to top level 	     - known bugs: flash of tan style in IE 	       - sometimes too much padding right side of playlist in FFox
git-svn-id: file:///home/awy/mirror/slim/trunk/server@4386 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/slimserver.css
+++ b/HTML/Fishbone/slimserver.css
@@ -8,10 +8,11 @@ BODY {
 }
 
 H3 {
-	font-size : 14pt;
+	font-size : 12pt;
 	font-weight : bold;	
 	text-align : left;
-	margin:0in;
+	margin:2 0 2 0;
+	padding: 2 0 2 0;
 }
 
 
@@ -197,6 +198,16 @@ A.linkbtn:hover {
 	margin-top: 8px;
 	_width: 100%;
 	_height: 100%;
+}
+
+.playlist
+{
+	padding: 0 8 0 8;
+	margin:0px;
+	margin-top: 8px;
+	height: auto;
+	_width: 100%;
+	overflow: auto;
 }
 
 .listing, .listing2, .even, .odd
