--- a/HTML/Fishbone/slimserver_gray.css
+++ b/HTML/Fishbone/slimserver_gray.css
@@ -8,10 +8,11 @@ BODY {
 }
 
 H3 {
-	font-size : 12pt;
+	font-size : 14pt;
 	font-weight : bold;	
 	text-align : left;
-	margin:0in; 
+	margin: 4 0 2 0;
+	padding: 4 0 2 0;
 }
 
 TD, P, A {
@@ -204,6 +205,16 @@ A.linkbtn:hover {
 	margin-top: 8px;
 	_width: 100%;
 	_height: 100%;
+}
+
+.playlist
+{
+	padding: 0 8 0 8;
+	margin:0px;
+	margin-top: 8px;
+	_height: 100%;
+	_width: 100%;
+	overflow: auto;
 }
 
 .listing, .listing2, .even, .odd
