--- a/HTML/Fishbone/slimserver_tan.css
+++ b/HTML/Fishbone/slimserver_tan.css
@@ -11,8 +11,8 @@ H3 {
 	font-size : 12pt;
 	font-weight : bold;	
 	text-align : left;
-	margin:0in; 
-	margin-bottom:0pt;	
+	margin:4 0 2 0;
+	padding: 4 0 2 0;
 }
 
 TD, P, A {
@@ -205,6 +205,16 @@ A.linkbtn:hover {
 	margin-top: 8px;
 	_width: 100%;
 	_height: 100%;
+}
+
+.playlist
+{
+	padding: 0 8 0 8;
+	margin:0px;
+	margin-top: 8px;
+	width: auto;
+	height: auto;
+	overflow: auto;
 }
 
 .listing, .listing2, .even, .odd
